<resources>
    <string name="app_name">MobiiliProject</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_products" />
    <string name="tuotteet">Tuotteet</string>
    <string name="Tilaus">Tilaus</string>
    <string name="menu_map" />
    <string name="Kartta">Kartta</string>
    <string name="menu_sign_in" />
    <string name="Kirjaudu">Kirjaudu</string>
    <string name="username">Käyttäjätunnus</string>
    <string name="log_in">Kirjaudu</string>
    <string name="password">Salasana</string>
    <string name="new_user">Uusi käyttäjä? Rekisteröidy tästä</string>

    <string name="title_activity_sign_up">SignUpActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="sign_up">Rekisteröidy</string>
    <string name="first_name">Etunimi</string>
    <string name="last_name">Sukunimi</string>
    <string name="email">Sähköposti</string>

    <string name="palauteteksti">Palautteesi on meille tärkeä. Kerro missä onnistuimme, mitä voisimme kehittää tai vaikka mitä tuotteita meiltä vielä puuttuu</string>
    <string name="compose_email">Lähetä sähköpostia</string>
    <string name="palautekuva">kalakeitto.jpg</string>
    <string name="menuOtsikko">RUOKALISTA</string>
    <string name="menuKuvaus">Käytämme ainoastaan kotimaisia raaka-aineita, sekä hyödynnämme lähituottajiemme ja kauppiaidemme ylijäämää. </string>
    <string name="menuVakio">Vakivalikoimamme</string>
    <string name="menuKausi">Kausivalikoimamme</string>
    <string name="annos1">KALAKEITTO</string>
    <string name="annos2">HERNEKEITTO</string>
    <string name="annos3">KARJALANPAISTI</string>
    <string name="annos4">MAKKARAKEITTO</string>
    <string name="annos5">RÖSSYPOTUT</string>
    <string name="annos6">JOULUINEN RIISIPUURO</string>

    <string name="kuvaus1">Perinteinen perämeren kalakeitto.</string>
    <string name="kuvaus2">Torstain tuttu hernekeitto.</string>
    <string name="kuvaus3">Mureaksi haudutettu karjalanpaisti.</string>
    <string name="kuvaus4">Kaikkien lemppari makkarakeitto.</string>
    <string name="kuvaus5">Oululaisille omintakeinen rössypotut.</string>
    <string name="kuvaus6">Suomalaiseen maitoon keitetty jouluinen riisipuuro.</string>
    <string name="location_value">Sijaintimme</string>
    <string name="location_desc">Täällä olemme.</string>
    <string name="etusivu">Etusivu</string>
    <string name="palaute">Palaute</string>
    <string name="Kassalle">Kassalle</string>Tilaussivun button kassalle
    <string name="order_page">Tässä voit tilata. Voit myös soittaa, puh. 987 654 321</string>


    <string name="ruokalaji">Ruokalaji:</string>
    <string name="l_het">Lähetä</string>
    <string name="p_iv">Päivä:</string>
    <string name="day">11/11/2020</string>
    <string name="time">Kellonaika:</string>
    <string name="ordertime">00:00</string>
    <string name="amount">Määrä:</string>
    <string name="order_amount">Henkilöä/litraa</string>
    <string name="address">Osoite:</string>
    <string name="more">Lisätietoja:</string>

    <string-array name="quantity_string_array">Ostoskorin tuotemäärät
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5(Max)</item>
    </string-array>

</resources>