<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_tuotteet"
            android:icon="@drawable/ic_food"
            android:title="@string/tuotteet" />
        <item
            android:id="@+id/nav_tilaus"
            android:icon="@drawable/ic_basket"
            android:title="@string/Tilaus" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_kartta"
            android:icon="@drawable/ic_map"
            android:title="@string/Kartta" />
    </group>
</menu>