<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/palauteteksti"

        android:textSize="30sp"
        android:textStyle="bold"
        android:paddingStart="15dp" />

    <Button
        android:id="@+id/sendEmail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/compose_email"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="100dp"
        />

    <ImageView
        android:id="@+id/imageButton"
        android:layout_width="match_parent"
        android:layout_height="259dp"
        android:src="@drawable/kalakeitto"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/palautekuva"/>

</LinearLayout>
